--- a/Projet_php/css/main.css
+++ b/Projet_php/css/main.css
@@ -1,15 +1,41 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+header{
+    display: flex;
+    height: 10vh;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(188, 188, 188);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+header > a {
+    text-decoration: none;
+    color: black;
+}
+
+header > a:hover{
+    background-color: whitesmoke;
+    border-radius: 1vh;
 }
 
 main {
     display: flex;
-    height: 70vh;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100vh;
     top: 0;
     left: 0;
     justify-content: center;
     text-align: center;
+    align-items: center;
     padding: 5vh;
 }
 
@@ -17,13 +43,95 @@ main {
 #main{
     display: flex;
     flex-wrap: wrap;
-    width: 50vh;
-    height: 20vh;
+    width: 40vh;
+    height: 30vh;
     margin: 1vh;
     padding: 1vh;
     text-align: center;
     justify-content: center;
     background-color: rgba(194, 188, 188,0.2);
     border-radius: 2vh;
+}
+
+.affiche{
+    display: flex;
+    flex-wrap: wrap;
+    width: 60vh;
+    height: 50vh;
+    margin: 1vh;
+    padding: 1vh;
+    text-align: center;
+    justify-content: center;
+    background-color: rgba(194, 188, 188,0.2);
+    border-radius: 2vh;
+}
+
+section{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 8vh;
+}
+
+.style_italic{
+    font-style: italic;
+}
+
+
+#us{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80vh;
+    height: 60vh;
+    margin: 2vh;
+    padding: 1vh;
+    text-align: center;
+    justify-content: center;
+    background-color: rgba(194, 188, 188,0.2);
+    border-radius: 2vh;
+}
+
+#history_title{
+    display: flex;
+    align-items: center;
+}
+
+footer{
+    display: flex;
+    flex-direction: row;
+    height: 40vh;
+    background-color: rgb(188, 188, 188);
+    justify-content: space-around;
+}
+
+ #footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    background-color: white;
+    border-radius: 2vh;
+}
+
+#map{
+    display: flex;
+    width : 20vh;
+    height : 20vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#map iframe{
+        width: 100%;
+        height: 100%;
+        border: none; 
 }
 
